# Enigma

./: README.md  meson.build
include/: enigma.h  util.h
src/: e_debug_mem.c  e_dynarr.c  e_logger.c  e_math.c  e_matrix.c  e_matrix_make.c  e_matrix_operations.c  e_mem_debug.c  e_noise.c  e_path.c  e_text.c  e_thread.c  e_types.c
test/: test_e_dynarr.c  test_e_math.c  test_e_sqrtf.c
